version 0.99.1 - XX-Mar-2010
 . [FIX] Texture2D allocs the right texturememory when using the non-premultiplied alg.(issue #813)

version 0.99.1-rc - 12-Mar-2010
 . [NEW] Actions: new added actions: CCProgressTo, CCProgressFromTo (issue #783)
 . [NEW] Box2d: udpated to r66 (issue #795)
 . [NEW] CGPointExtensions: new add functions:  CGPointExtension like: clampf, ccpClamp, ccpFromSize,
			ccpCompOp, ccpLerp, ccpFuzzyEqual, ccpCompMult, ccpAngleSigned, ccpAngle,
			ccpRotateByAngle, ccpLineIntersect (issue #783)
 . [NEW] Chipmunk: updated to v5.2 (issue #784)
 . [NEW] Macros: added CCLOGINFO() and CCLOGERROR(). CCLOGINFO() disabled by default (issue #799)
 . [NEW] SpriteFrameCache: added support for Zwoptex Desktop version (issue #812)
 . [NEW] TMX: if layer contains cc_vertezx=automatic, tiles will use vertexZ and GL_ALPHA_TEST (issue #780)
 . [NEW] TMX: TMXLayer supports Tiled offset property (issue #616)
 . [NEW] TMX: Added support for .tsx tilesets (issue #619)
 . [NEW] Transition: new added transitions: CCRadialCCWTransition, CCRadialCWTransition (issue #783)
 . [FIX] All: cocos2d constants start with kCC. Change is backward compatible (issue #809)
 . [FIX] Actions: CCRepeat works smoothly, without jerks (re-fixed issue #390)
 . [FIX] Actions: CCAnimate frame calculation is more precise (issue #758)
 . [FIX] CocosDenshion: Fixed mute (issue #789)
 . [FIX] RenderTexture: removed limit when saving images (issue #782)
 . [FIX] RenderTexture: doesn't use GL_DITHER and restores glColorMask() (issue #796)
 . [FIX] Sprite, LabelAtlas, TiledMap: opactiy + color works even when the texture is premultiplied (issue #668)
 . [FIX] TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)
 . [FIX] TMX: TMXLayer uses the opacity defined for the layer (issue #785)
 . [FIX] TMX: TMXLayer raises exception if it receives the addChild message (issue #808)
 . [FIX] Texture2D: removed NSLog when image was NULL (issue #802)